Assets/CSS/styles.css
.site-header {
  font-family: sans-serif; }
  .site-header a {
    text-decoration: none;
    color: #666; }
  .site-header .site-header-top-wrap {
    border-bottom: solid thin #dcdcd9; }
    .site-header .site-header-top-wrap .site-header-etsy-logo {
      display: inline-block;
      margin: 0 0 0 16%;
      padding: .3em .5em .5em 0;
      font-size: 2.8em;
      font-family: serif;
      color: #f56400;
      font-weight: 500; }
    .site-header .site-header-top-wrap .site-header-search-bar-wrapper {
      display: inline-block;
      width: 25%; }
      .site-header .site-header-top-wrap .site-header-search-bar-wrapper .site-header-search-bar {
        display: inline-block;
        font-size: 1em;
        line-height: 2em;
        border: solid thin #cfcbc8;
        height: 35px;
        width: 70%;
        border-radius: .3em 0 0 .3em;
        background-color: #fbfbfa;
        margin: -3px 0 0 0; }
      .site-header .site-header-top-wrap .site-header-search-bar-wrapper .site-header-search-button {
        display: inline-block;
        background-color: #34a8c4;
        color: white;
        font-weight: bold;
        padding: 7px 25px 9px 25px;
        margin: -1px 0 0 -5px;
        border-radius: 0 .3em .3em 0; }
    .site-header .site-header-top-wrap .site-header-top-nav-sell-wrap {
      display: inline-block;
      text-align: center;
      vertical-align: center;
      margin: 2.3% 5% 5% 0%;
      float: left;
      color: #34a8c4; }
      .site-header .site-header-top-wrap .site-header-top-nav-sell-wrap:hover {
        text-decoration: underline; }
    .site-header .site-header-top-wrap .site-header-top-nav-wrapper {
      display: inline-block;
      float: right;
      margin: 1.5% 16% 0 0;
      width: 28%; }
      .site-header .site-header-top-wrap .site-header-top-nav-wrapper .fa {
        display: block;
        font-size: 1.5em;
        padding: .1em 1em; }
      .site-header .site-header-top-wrap .site-header-top-nav-wrapper .site-header-top-nav-home-wrap {
        display: inline-block;
        text-align: center;
        border-right: solid thin #dcdcd9;
        border-left: solid thin #dcdcd9;
        color: #6c6c63; }
      .site-header .site-header-top-wrap .site-header-top-nav-wrapper .site-header-top-nav-favorites-wrap {
        display: inline-block;
        text-align: center;
        border-right: solid thin #dcdcd9;
        padding: 0 .2em;
        color: #6c6c63; }
      .site-header .site-header-top-wrap .site-header-top-nav-wrapper .site-header-top-nav-you-wrap {
        display: inline-block;
        text-align: center;
        border-right: solid thin #dcdcd9;
        color: #6c6c63; }
      .site-header .site-header-top-wrap .site-header-top-nav-wrapper .site-header-top-nav-cart-wrap {
        display: inline-block;
        text-align: center;
        color: #6c6c63; }
  .site-header .site-header-dropdown-nav-wrap {
    border-bottom: solid thin #dcdcd9; }
    .site-header .site-header-dropdown-nav-wrap .site-header-dropdown-nav-links-wrap {
      margin: 0 16% 1px 16%; }
      .site-header .site-header-dropdown-nav-wrap .site-header-dropdown-nav-links-wrap a {
        display: inline-block;
        padding: .75em 0;
        margin: 0 2.5% 0 0;
        color: #6c6c63; }
        .site-header .site-header-dropdown-nav-wrap .site-header-dropdown-nav-links-wrap a:hover {
          border-bottom: solid 3px #f56400; }
  .site-header .site-header-dropdown-standard-left-link {
    padding: 1em .5em; }
    .site-header .site-header-dropdown-standard-left-link:hover {
      background-color: lightblue; }
    .site-header .site-header-dropdown-standard-left-link .site-header-left-drop-caret {
      display: inline-block;
      float: right;
      margin: 0 7%; }
  .site-header .site-header-dropdown-standard-middle-link {
    display: block;
    padding: .4em 1em;
    color: black; }
    .site-header .site-header-dropdown-standard-middle-link:hover {
      text-decoration: underline; }
  .site-header .site-header-dropdown-indented-middle-link {
    display: block;
    padding: .4em 2em;
    color: #aaa; }
    .site-header .site-header-dropdown-indented-middle-link:hover {
      text-decoration: underline; }
  .site-header .site-header-dropdown-bold-middle-link {
    display: block;
    padding: .4em .4em;
    color: black;
    font-weight: bold;
    font-size: 1.1em; }
    .site-header .site-header-dropdown-bold-middle-link:hover {
      text-decoration: underline; }
  .site-header .site-header-clothing-dropdown {
    margin: 0 14%;
    height: 53%;
    border: solid thin #dcdcd9;
    display: none; }
    .site-header .site-header-clothing-dropdown .site-header-clothing-dropdown-left-nav {
      position: absolute;
      height: 52%;
      width: 17.5%;
      border-right: solid thin #dcdcd9;
      display: inline-block; }
      .site-header .site-header-clothing-dropdown .site-header-clothing-dropdown-left-nav .clothing-left-link-1 {
        margin: 5% 0 0 0; }
    .site-header .site-header-clothing-dropdown .site-header-clothing-dropdown-middle-nav {
      position: absolute;
      height: 52%;
      width: 34.5%;
      margin: 0 0 0 17.5%;
      display: inline-block;
      display: none; }
      .site-header .site-header-clothing-dropdown .site-header-clothing-dropdown-middle-nav .site-header-clothing-dropdown-middle-nav-left {
        display: inline-block;
        height: 98%;
        width: 49%;
        position: absolute;
        margin: 2% 0 0 0; }
      .site-header .site-header-clothing-dropdown .site-header-clothing-dropdown-middle-nav .site-header-clothing-dropdown-middle-nav-right {
        position: absolute;
        display: block;
        height: 98%;
        width: 49%;
        margin: 2% 0 0 49%; }
/* ... */

